CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(noa C CXX)
SET(SO_VERSION_MAJOR 0)
SET(SO_VERSION 0.1)

SET(VENDOR "samsung")
SET(PACKAGE ${PROJECT_NAME})
SET(PKGNAME "com.${VENDOR}.${PACKAGE}")
SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(XMLDIR ${CMAKE_INSTALL_XMLDIR})
SET(BINDIR "${PREFIX}/bin")
SET(RESDIR "${PREFIX}/res")
SET(DBDIR "${PREFIX}/data")
SET(DATADIR "${PREFIX}/data")
SET(LOCALEDIR "${RESDIR}/locale")
SET(ICONDIR "${RESDIR}/icons/default/small")
SET(EDJDIR "${RESDIR}/edje")
SET(LIBDIR "${PREFIX}/lib")
SET(INCLUDEDIR "${PREFIX}/include")

SET(COMMON_DIR "noa-common")
SET(LIB_NAME_COM "noa-common")

# include file
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/${COMMON_DIR}/include)

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(${COMMON_DIR})
